[package]
name = "dgrlin"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dgrlin"
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.5.0"
eyre = "0.6.12"
hex = "0.4.3"
log = "0.4.27"
pyo3 = "0.24.0"
pyo3-log = "0.12.3"
serde = "1.0.219"
